fix: align avatar text

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,10 +1,10 @@
 @tailwind utilities;
 
-@import "ng-zorro-antd/style/default.less";
-@import "ng-zorro-antd/button/style/entry.less";
-@import "ng-zorro-antd/layout/style/entry.less";
-@import "ng-zorro-antd/typography/style/entry.less";
-@import "ng-zorro-antd/icon/style/entry.less";
+@import 'ng-zorro-antd/style/default.less';
+@import 'ng-zorro-antd/button/style/entry.less';
+@import 'ng-zorro-antd/layout/style/entry.less';
+@import 'ng-zorro-antd/typography/style/entry.less';
+@import 'ng-zorro-antd/icon/style/entry.less';
 
 @layout-header-background: #fff;
 @layout-body-background: #fff;
@@ -46,4 +46,8 @@ nz-layout {
 nz-text-edit {
   display: inline-flex;
   align-items: center;
+}
+
+.ant-avatar-string {
+  position: unset;
 }
